--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style.css" />
+    <link rel="stylesheet" href="styles.css" />
     <title>Travel Website</title>
   </head>
   <body>
     <section class="showcase">
       <header>
         <h2 class="logo">Travel</h2>
-        <div class="toggle"></div>
+        <div class="toggle active"></div>
       </header>
       <video
         src="https://joy1.videvo.net/videvo_files/video/free/2017-08/large_watermarked/170724_15_Setangibeach_preview.mp4"
@@ -29,7 +29,23 @@
           minim veniam, quis nostrud exercitation ullamco laboris nisi ut
           aliquip ex ea commodo consequat.
         </p>
+        <a href="#">Explore</a>
       </div>
+      <ul class="social">
+        <li><img src="https://i.ibb.co/x7P24fL/facebook.png" /></li>
+        <li><img src="https://i.ibb.co/Wnxq2Nq/twitter.png" /></li>
+        <li><img src="https://i.ibb.co/ySwtH4B/instagram.png" /></li>
+      </ul>
     </section>
+
+    <div class="menu">
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">News</a></li>
+        <li><a href="#">Destination</a></li>
+        <li><a href="#">Blog</a></li>
+        <li><a href="#">Contact</a></li>
+      </ul>
+    </div>
   </body>
 </html>
